Another small change in Welcome view

--- a/app/views/splash/Welcome.html.erb
+++ b/app/views/splash/Welcome.html.erb
@@ -5,5 +5,5 @@
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top w3-center" style="font-family: 'Passion One', cursive;">The Collective Conscious Movement</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%;">
-    <p class="w3-large w3-center">COMING SOON.</p>
+    <p class="w3-large w3-center">COMING SOON</p>
   </div>
